@@ -1,3 +1,9 @@
+2012-10-26  Sebastien Binet  <binet@voatlas04.cern.ch>
+
+	* tagging PyUtils-00-12-20
+	* fix bug #97959: attempt at handling event-less bs-files
+	* M python/AthFile/impl.py
+
 2012-10-03  Sebastien Binet  <binet@cern.ch>
 
 	* tagging PyUtils-00-12-19
